<resources>
    <string name="app_name">Mother Care</string>
    <string name="login_to_existing_account">Login to Existing Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="Title">Save Your Woman</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="places_api_key">AIzaSyA0dX5H7KFB0e_tPlRT3ODaBufEYhUDYSs</string>
    <string-array name="interval">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="whatis">A pregnancy lasts for about 40 weeks. The weeks are grouped into three trimesters. The first trimester is the time in between fertilization of the egg by the sperm (conception) and week 12 of a pregnancy. A woman’s body goes through many changes during the first 12 weeks of a pregnancy. Women often start to have concerns over: "\n""\n" • What to eat"\n" • Which types of prenatal tests they should consider"\n" • How much weight they might gain"\n" • How they can make sure their baby stays healthy"\n""\n"Understanding a pregnancy week by week can help you make informed decisions and prepare for the big changes that lie ahead. </string>
    <string name="ftbodychanges">In the first trimester, a woman’s body goes through many changes. The body releases hormones that affect almost every single organ in the body. The first sign you may be pregnant is missing a period. As the first few weeks pass, some women experience the following:"\n""\n" • Tiredness"\n" • Upset stomach"\n" • Throwing up"\n" • Mood swings"\n" • Tender breasts"\n" • Heartburn"\n" • Weight gain"\n" • Headaches"\n" • Cravings for certain foods"\n" • Revulsion to certain foods"\n" • Constipation"\n""\n"You may need to rest more or eat smaller meals during this time. Some women, however, don’t feel any of these symptoms at all."\n" </string>
    <string name="the_first_day_of_your_pregnancy_is_also_the_first_day_of_your_last_menstrual_period_at_about_10_to_14_days_after_an_egg_is_released_combines_with_a_sperm_and_conception_occurs">The first day of your pregnancy is also the first day of your last menstrual period. At about 10 to 14 days after, an egg is released, combines with a sperm, and conception occurs.</string>
    <string name="about_a_week_after_conception_between_days_seven_and_10_the_fertilized_ovum_attaches_to_the_lining_of_the_uterus_and_the_placenta_starts_to_form_by_about_two_weeks_when_you_miss_your_first_period_the_embryo_becomes_a_layered_disc_on_the_uterine_wall_as_shown_below_by_about_four_weeks_major_body_systems_are_starting_to_develop">About a week after conception, between days seven and 10, the fertilized ovum attaches to the lining of the uterus and the placenta starts to form. By about two weeks, when you miss your first period, the embryo becomes a layered disc on the uterine wall. As shown below, by about four weeks, major body systems are starting to develop</string>
    <string name="tooth_buds_are_present_fingernails_and_toenails_are_forming_immature_kidneys_secrete_urine_to_the_bladder_external_genitalia_are_forming_the_fetus_can_now_move_in_the_amniotic_fluid_but_you_can_t_feel_it_your_healthcare_provider_may_be_able_to_hear_the_fetal_heart_rate_with_an_electronic_listening_device">Tooth buds are present. Fingernails and toenails are forming. Immature kidneys secrete urine to the bladder. External genitalia are forming. The fetus can now move in the amniotic fluid, but you can’t feel it. Your healthcare provider may be able to hear the fetal heart rate with an electronic listening device.</string>
    <string name="the_first_three_months_of_pregnancy_the_first_trimester_is_a_critical_time_your_baby_is_growing_and_developing_rapidly_and_is_most_at_risk_from_hazards_such_as_smoking_alcohol_drugs_infections_and_x_rays_by_the_end_of_the_first_trimester_all_your_baby_s_organs_will_be_formed_and_functioning">The first three months of pregnancy – the first trimester - is a critical time. Your baby is growing and developing rapidly, and is most at risk from hazards such as smoking, alcohol, drugs, infections and X rays. By the end of the first trimester, all your baby’s organs will be formed and functioning.</string>
    <string name="ftdoctorconsultation"> When you first learn you are pregnant"\n""\n" 1. Make an appointment with your doctor to begin caring for the developing baby."\n" 2. If you are not already on prenatal vitamins, start them immediately."\n" 3. Ideally, women take folic acid (in prenatal vitamins) for a year before the pregnancy."\n" 4. Women normally see their doctor once a month during the first trimester."\n""\n" During your first visit, a doctor will take a full health history and perform a full physical and pelvic exam. The doctor may also:"\n""\n" • perform an Ultrasound to confirm the pregnancy"\n" • perform a Pap test"\n" • take your blood pressure"\n" • test for sexually transmitted infections, HIV, and hepatitis"\n" • estimate your date of delivery or “due date,” which is around 266 days from the first day of your last period"\n" • screen for risk factors like anemia"\n" • check thyroid levels"\n" • check your weight"\n""\n" At around 11 weeks"\n" The doctor will perform a test called a nuchal translucency (NT) scan. The test uses an ultrasound to measure the baby’s head and thickness of the baby’s neck. The measurements can help determine the chance that your baby will be born with a genetic disorder known as Down syndrome."\n""\n" Ask your doctor whether or not genetic screening is recommended for your pregnancy. Genetic screening is a test used to find out your baby’s risk for specific genetic diseases."\n" </string>
    <string name="it_s_important_for_a_woman_to_be_aware_of_what_to_do_and_what_to_avoid_while_pregnant_in_order_to_take_care_of_themselves_and_their_developing_baby">It’s important for a woman to be aware of what to do and what to avoid while pregnant in order to take care of themselves and their developing baby.</string>
    <string name="ftwhattodo">Here are good personal health measures to take during the first trimester:"\n" • Take prenatal vitamins."\n" • Exercise regularly."\n" • Work out your pelvic floor by doing Kegel exercises."\n" • Eat a diet high in fruits, vegetables, low-fat forms of protein, and fiber."\n" • Drink lots of water."\n" • Eat enough calories (about 300 calories more than normal)."\n" </string>
    <string name="ftwhattoavoid">These things should be avoided during the first trimester:"\n" • strenuous exercise or strength training that could cause an injury to your stomach"\n" • alcohol"\n" • caffeine (no more than one cup of coffee or tea per day)"\n" • smoking"\n" • illegal drugs"\n" • raw fish or smoked seafood (no sushi)"\n" • shark, swordfish, mackerel, or white snapper fish (they have high levels of mercury)"\n" • raw sprouts"\n" • cat litter, which can carry a parasitic disease called toxoplasmosis"\n" • unpasteurized milk or other dairy products"\n" • deli meats or hot dogs"\n" </string>
    <string name="ftwhatelsetoavoid">Body changes provide plenty to think about during the first trimester, but having a baby will affect other parts of your life too. There are many things to start to think about during the first few months of your pregnancy so you can prepare for the future. </string>
    <string name="ftifyouhaveahighriskpregnancy">High-risk pregnancy means that there is a greater chance of complications. Factors that may make your pregnancy high-risk include:"\n" • being young"\n" • being over 35 years old"\n" • being overweight"\n" • being underweight"\n" • having high blood pressure, diabetes, HIV, cancer or other autoimmune disorders"\n" • being pregnant with twins or multiples"\n" Women with a high-risk pregnancy may need to visit the doctor more often and sometimes may need a specially trained doctor. Having a high-risk pregnancy doesn’t necessarily mean you will have any problems."\n" </string>
    <string name="labour_exp">Every woman’s experience of labour is different. But there are several signs that labour may be starting. You may experience:"\n""\n" 1.a ‘show’, which is when the mucus plug from your cervix comes away – it appears as a pink-brown jelly-like blob or in pieces"\n" 2.pains in your tummy that may feel like strong period pains – these these are the start of contractions"\n" 3.lower back pain"\n" 4.an urge to go to the toilet – this is caused by your baby’s head pressing on your bowel."\n" 5.Your waters may also break or you might start feeling contractions."\n" </string>
    <string name="call_your_midwife_birth_centre_or_hospital_labour_ward_and_tell_them_what_s_happening_the_start_of_labour_is_called_the_latent_stage_and_can_last_hours_or_for_some_women_days_if_you_are_more_than_37_weeks_with_an_uncomplicated_pregnancy_you_ll_probably_be_advised_to_stay_at_home_until_your_labour_is_established_this_is_when_your_cervix_opens_dilates_to_at_least_4cm_and_your_contractions_become_stronger_and_more_regular">Call your midwife, birth centre or hospital labour ward and tell them what’s happening. The start of labour is called the latent stage and can last hours or, for some women, days. If you are more than 37 weeks with an uncomplicated pregnancy, you’ll probably be advised to stay at home until your labour is ‘established’. This is when your cervix opens (dilates) to at least 4cm and your contractions become stronger and more regular.</string>
    <string name="once_labour_gets_going_your_contractions_will_become_more_regular_and_won_t_go_away_call_your_midwife_birth_centre_or_hospital_labour_ward_when_you_are_having_a_contraction_every_5_minutes_that_last_30_60_seconds_if_you_have_chosen_a_home_birth_the_midwife_will_come_to_you_if_this_is_not_your_first_baby_or_you_are_likely_to_have_a_quick_labour_your_midwife_may_advise_you_to_call_earlier_than_this">Once labour gets going, your contractions will become more regular and won\'t go away. Call your midwife, birth centre or hospital labour ward when you are having a contraction every 5 minutes that last 30–60 seconds. If you have chosen a home birth, the midwife will come to you.If this is not your first baby, or you are likely to have a quick labour, your midwife may advise you to call earlier than this.</string>
    <string name="call_the_labour_ward_or_your_midwife_if_you_re_still_not_sure_whether_you_re_in_labour_they_are_used_to_dealing_with_false_alerts_so_don_t_worry_about_wasting_anyone_s_time">Call the labour ward or your midwife If you\'re still not sure whether you\'re in labour.They are used to dealing with false alerts so don\'t worry about wasting anyone’s time.</string>
</resources>